--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,10 @@
 @font-face {
-  font-family: Agbalumo;
-  src: url(fonts/Agbalumo-Regular.ttf);
+  font-family: Oswald;
+  src: url(/fonts/Oswald-VariableFont_wght.ttf);
 }
-.centered,
-.inputBox,
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+* {
+  font-family: Oswald;
 }
 
 body {
@@ -15,7 +12,16 @@ body {
   background-color: #0c0032;
 }
 
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .inputBox {
   background-color: #190061;
   margin: 5vh;
-} /*# sourceMappingURL=styles.css.map */
+  border-radius: 10%;
+  width: 40%;
+  height: 30%;
+}
