--- a/styles.css
+++ b/styles.css
@@ -52,35 +52,109 @@ h1 {
   margin-left: 3vh;
 }
 
+/* EAC Field */
+
 .number-field {
   font-size: 14px;
-  position: relative;
-  --field-padding: 12px;
+  position: static;
   border-top: 20px solid transparent;
 }
 
 .number-field input {
   border: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: #ffffff;
   padding: 12px;
   border-radius: 3px;
   width: 250px;
   font-size: 14px;
-  padding: var(--field-padding);
 }
+
+.number-field input:focus {
+  border: 3px solid #555;
+}
+
+/* Buttons */
 
 .buttons button {
   margin: 3%;
   width: 30%;
   height: auto;
+  background-color: #c38d9e;
+  color: white;
+  border-radius: 5px;
+}
+
+.buttons button:hover {
+  background-color: #e27d60;
+}
+
+/* Switch */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #e27d60;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Main part */
+
+.main-section {
+  margin-left: 30vh;
 }
 
 /* 
-  #E27D60 
+  #E27D60  
   #85DCBA
   #E8A87C
   #C38D9E
