--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 
 body {
   color: #ffffff;
-  background-color: #41b3a3;
+  background-color: #077187;
   margin: 0;
   padding: 0;
 }
@@ -24,7 +24,7 @@ body {
   display: flex;
   align-items: start;
   width: 100%;
-  background-color: #e8a87c;
+  background-color: #06a77d;
 }
 
 #title {
@@ -32,14 +32,14 @@ body {
 }
 
 .input-box {
-  background-color: #85dcba;
+  background-color: #074f57;
   width: 40vh;
   height: 30vh;
 }
 
 .sidebar {
   width: 30vh;
-  background-color: #85dcba;
+  background-color: #074f57;
   position: absolute;
   height: 100%;
   overflow: auto;
@@ -78,13 +78,13 @@ body {
   margin: 3%;
   width: 30%;
   height: auto;
-  background-color: #c38d9e;
+  background-color: #06a77d;
   color: white;
   border-radius: 5px;
 }
 
 .buttons button:hover {
-  background-color: #e27d60;
+  background-color: #74a57f;
 }
 
 /* Switch */
@@ -129,7 +129,7 @@ body {
 }
 
 input:checked + .slider {
-  background-color: #e27d60;
+  background-color: #74a57f;
 }
 
 input:checked + .slider:before {
